--- a/css/styles.css
+++ b/css/styles.css
@@ -1060,8 +1060,8 @@ font-size: 34px !important;
   }
 
   .travel-card {
-    flex: 0 0 100%;                 /* full width card */
-    min-width: 100%;
+    flex: 0 0 70%;                 /* full width card */
+    min-width: 70%;
     scroll-snap-align: start;
   }
 }
